2013.02.03.13
- CHG: divisions with max applied to big number should be more "interesting".
- CHG: copyright 2012-2013 instead of 2012 (nobody cares, I know).
- DEV: new class util.RandomNonLinear derived from java.util.Random to get nextLong and non linear distribution.
2013.01.13.13:
- CHG: texts have been modified to show nicer and more international quote signs.
- NEW: win/loss dialogs show the actual result or the given answer.
- NEW: win/loss dialogs of training allows to jump directly to the next exercise.
- FIX: state of training or challenge was not properly saved when rotating device.
- DEV: moved to git at https://code.google.com/p/pmtd/
2012.12.18.20:
- NEW: challenge mode can now be used and shows a result with score (which can't yet be stored).
- CHG: specific title for each activity.
- DEV: new ChallengeRoundActivity activity.
2012.12.02.21:
- FIX: correct function of new exercise button (sorry!).
- FIX: correct labels for challenge context menu (only in English).
- DEV: create superclass PmtdRoundActivity and derive/rename TrainingRoundActivity (was PlusMinusTimesDivideActivity).
2012.11.24.09:
- NEW: bigger icons for high-density screens.
- NEW: challenge mode still a stub, user can be selected, challenge created/renamed, but not used (yet).
- CHG: last trained operation is remembered after leaving the app.
- NEW: hints about subtracting and dividing same numbers.
- DEV: created interface for prefs and start to use it.
- DEV: create all "Challenge" classes.
2012.10.06.11:
- NEW: stub of a challenge mode (just user list, where users can be created/deleted/renamed). Work in progress!
- CHG: menus have icons (looks nicer).
- NEW: An about dialog with the possibility to send feedback.
- DEV: Make Prefs a non-static class and adapt usage accordingly (still preparation for challenge mode).
- DEV: Stop fiddling with R.string.plus/minus/etc and use instead INumberProvider.PLUS/MINUS/etc